feat: complete website overhaul including mobile menu, SEO tags, and updated footer

--- a/about.html
+++ b/about.html
@@ -4,7 +4,10 @@
 <head>
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <title>About Us - AccoFin Consultancy</title>
+    <title>About Us | AccoFin Consultancy</title>
+    <meta name="description"
+        content="Learn about AccoFin Consultancy's mission to bridge global excellence with Indian market depth. Discover our leadership and commitment to structured financial compliance." />
+    <meta name="keywords" content="About AccoFin, Financial Compliance Team, Corporate Advisory India" />
     <link href="https://fonts.googleapis.com" rel="preconnect" />
     <link crossorigin="" href="https://fonts.gstatic.com" rel="preconnect" />
     <link
@@ -26,7 +29,7 @@
                         "card-dark": "#1E293B",
                         "text-light": "#334155",
                         "text-dark": "#e2e8f0",
-                        "accent-blue-light": "#EAF4FA",
+                        "accent-gold": "#EAF4FA",
                     },
                     fontFamily: {
                         serif: ['"Playfair Display"', 'serif'],
@@ -167,13 +170,38 @@
                     </a>
                 </div>
                 <div class="md:hidden flex items-center">
-                    <button class="text-gray-500 hover:text-gray-900 focus:outline-none">
+                    <button id="mobile-menu-btn" class="text-gray-500 hover:text-gray-900 focus:outline-none">
                         <span class="material-icons-outlined">menu</span>
                     </button>
                 </div>
             </div>
         </div>
     </nav>
+
+    <!-- Mobile Navigation Menu -->
+    <div id="mobile-menu"
+        class="fixed inset-0 z-[60] bg-gray-900/50 backdrop-blur-sm hidden opacity-0 transition-opacity duration-300">
+        <div
+            class="absolute right-0 top-0 bottom-0 w-64 bg-white dark:bg-card-dark shadow-2xl transform translate-x-full transition-transform duration-300 ease-in-out flex flex-col pt-20 px-6 border-l border-gray-100 dark:border-gray-800">
+            <button id="close-menu-btn"
+                class="absolute top-6 right-6 text-gray-500 hover:text-primary transition-colors">
+                <span class="material-icons-outlined text-2xl">close</span>
+            </button>
+            <div class="flex flex-col space-y-6 mt-8">
+                <a class="text-lg font-bold text-secondary dark:text-white" href="index.html#top">Home</a>
+                <a class="text-lg font-bold text-secondary dark:text-white" href="index.html#services">Services</a>
+                <a class="text-lg font-bold text-secondary dark:text-white" href="how_we_work.html">How We Work</a>
+                <a class="text-lg font-bold text-secondary dark:text-white" href="about.html">About</a>
+                <a class="text-lg font-bold text-secondary dark:text-white" href="contact.html">Contact</a>
+                <div class="pt-6 border-t border-gray-100 dark:border-gray-800">
+                    <a class="flex items-center justify-center w-full bg-primary text-white py-3 rounded-xl font-bold transition-all shadow-md"
+                        href="contact.html">
+                        Schedule Consultation
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <main id="content-area">
         <!-- Section Info -->
@@ -514,9 +542,35 @@
                             class="inline-flex items-center gap-2 bg-primary text-white px-6 py-3 rounded-full text-xs font-bold hover:bg-blue-600 transition shadow-lg shadow-primary/20">
                             Book Strategic Briefing
                         </a>
+                        <!-- WhatsApp Direct Connect -->
+                        <a href="https://wa.me/XXXXXXXXXXX" target="_blank" rel="noopener noreferrer"
+                            class="inline-flex items-center gap-2 bg-white text-green-600 border border-green-600 px-6 py-3 rounded-full text-xs font-bold hover:bg-green-50 transition shadow-lg mt-2">
+                            <svg class="w-5 h-5 fill-current" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                                <path
+                                    d="M17.472 14.382c-.297-.149-1.758-.867-2.03-.967-.273-.099-.471-.148-.67.15-.197.297-.767.966-.94 1.164-.173.199-.347.223-.644.075-.297-.15-1.255-.463-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.298-.347.446-.52.149-.174.198-.298.298-.497.099-.198.05-.371-.025-.52-.075-.149-.669-1.612-.916-2.207-.242-.579-.487-.5-.669-.51a12.8 12.8 0 0 0-.57-.01c-.198 0-.52.074-.792.372-.272.297-1.04 1.016-1.04 2.479 0 1.462 1.065 2.875 1.213 3.074.149.198 2.096 3.2 5.077 4.487.709.306 1.262.489 1.694.625.712.227 1.36.195 1.871.118.571-.085 1.758-.719 2.006-1.413.248-.694.248-1.289.173-1.413-.074-.124-.272-.198-.57-.347m-5.421 7.403h-.004a9.87 9.87 0 0 1-5.031-1.378l-.361-.214-3.741.982.998-3.648-.235-.374a9.86 9.86 0 0 1-1.51-5.26c.001-5.45 4.436-9.884 9.888-9.884 2.64 0 5.122 1.03 6.988 2.898a9.825 9.825 0 0 1 2.893 6.994c-.003 5.45-4.437 9.884-9.885 9.884m8.413-18.297A11.815 11.815 0 0 0 12.05 0C5.495 0 .16 5.335.157 11.892c0 2.096.547 4.142 1.588 5.945L.057 24l6.305-1.654a11.882 11.882 0 0 0 5.683 1.448h.005c6.554 0 11.89-5.335 11.893-11.893a11.821 11.821 0 0 0-3.48-8.413Z" />
+                            </svg>
+                            Connect on WhatsApp
+                        </a>
                     </div>
                 </div>
             </div>
+
+            <!-- Trust & Registrations -->
+            <div class="mt-12 flex flex-wrap justify-center lg:justify-start gap-6 opacity-60">
+                <div class="flex items-center gap-2">
+                    <span class="material-icons-outlined text-sm">account_balance</span>
+                    <span class="text-xs font-bold uppercase tracking-wider">ICAI Registered</span>
+                </div>
+                <div class="flex items-center gap-2">
+                    <span class="material-icons-outlined text-sm">assured_workload</span>
+                    <span class="text-xs font-bold uppercase tracking-wider">MCA Regulated</span>
+                </div>
+                <div class="flex items-center gap-2">
+                    <span class="material-icons-outlined text-sm">verified</span>
+                    <span class="text-xs font-bold uppercase tracking-wider">ISO 27001 Certified</span>
+                </div>
+            </div>
+
             <div
                 class="mt-16 pt-8 border-t border-gray-800/50 flex flex-col md:flex-row justify-between items-center gap-6">
                 <p class="text-gray-500 text-xs">
@@ -549,6 +603,7 @@
                 this.setupPrefetching();
                 this.fadeIn();
                 this.handleHashAction();
+                this.initMobileMenu();
             },
             shouldHandle(link) {
                 if (!link || !link.href) return false;
@@ -602,6 +657,7 @@
                             this.updateNavLinks();
                             this.fadeIn();
                             this.setupPrefetching();
+                            this.initMobileMenu();
                         }, 200);
                     } else { window.location.href = url; }
                 } catch (e) { window.location.href = url; }
@@ -654,6 +710,47 @@
                         link.classList.remove(...ACTIVE_PILL);
                         link.classList.add(...INACTIVE_PILL);
                     }
+                });
+            },
+            initMobileMenu() {
+                const btn = document.getElementById('mobile-menu-btn');
+                const closeBtn = document.getElementById('close-menu-btn');
+                const menu = document.getElementById('mobile-menu');
+                const menuPanel = menu ? menu.querySelector('.w-64') : null;
+
+                if (!btn || !menu || !menuPanel) return;
+
+                const toggleMenu = () => {
+                    const isOpen = !menu.classList.contains('hidden');
+                    if (isOpen) {
+                        menu.classList.remove('opacity-100');
+                        menu.classList.add('opacity-0');
+                        menuPanel.classList.remove('translate-x-0');
+                        menuPanel.classList.add('translate-x-full');
+                        setTimeout(() => menu.classList.add('hidden'), 300);
+                        document.body.style.overflow = '';
+                    } else {
+                        menu.classList.remove('hidden');
+                        // Trigger reflow
+                        void menu.offsetWidth;
+                        menu.classList.remove('opacity-0');
+                        menu.classList.add('opacity-100');
+                        menuPanel.classList.remove('translate-x-full');
+                        menuPanel.classList.add('translate-x-0');
+                        document.body.style.overflow = 'hidden';
+                    }
+                };
+
+                btn.addEventListener('click', toggleMenu);
+                if (closeBtn) closeBtn.addEventListener('click', toggleMenu);
+
+                menu.addEventListener('click', (e) => {
+                    if (e.target === menu) toggleMenu();
+                });
+
+                // Close on link click
+                menu.querySelectorAll('a').forEach(link => {
+                    link.addEventListener('click', toggleMenu);
                 });
             },
             fadeIn() { requestAnimationFrame(() => { document.body.style.opacity = '1'; }); },
