--- a/indian_businesses.html
+++ b/indian_businesses.html
@@ -4,7 +4,10 @@
 <head>
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <title>Indian Business Support - AccoFin Consultancy</title>
+    <title>Indian Business Support | AccoFin Consultancy</title>
+    <meta name="description"
+        content="Comprehensive support for domestic Indian businesses including entity formation, financial compliance, and labor law tracking." />
+    <meta name="keywords" content="Private Limited Company Registration, GST Filing India, EPF Compliance" />
     <link href="https://fonts.googleapis.com" rel="preconnect" />
     <link crossorigin="" href="https://fonts.gstatic.com" rel="preconnect" />
     <link
@@ -28,7 +31,7 @@
                         "card-dark": "#1E293B",
                         "text-light": "#334155",
                         "text-dark": "#e2e8f0",
-                        "accent-blue-light": "#EAF4FA",
+                        "accent-gold": "#EAF4FA",
                     },
                     fontFamily: {
                         serif: ['"Playfair Display"', 'serif'],
@@ -164,7 +167,7 @@
                             href="contact.html">Contact</a>
                     </div>
 
-                    <a class="bg-secondary hover:bg-primary dark:bg-white dark:text-secondary dark:hover:bg-primary dark:hover:text-white text-white px-8 py-3 rounded-xl font-bold transition-all shadow-md hover:shadow-lg text-sm shrink-0"
+                    <a class="bg-primary hover:bg-opacity-90 text-white px-8 py-3 rounded-xl font-bold transition-all shadow-md hover:shadow-lg text-sm shrink-0"
                         href="contact.html">
                         Schedule Consultation
                     </a>
@@ -430,7 +433,7 @@
                             class="flex gap-6 p-8 rounded-2xl bg-white dark:bg-card-dark border border-gray-200 dark:border-gray-700 shadow-sm hover:shadow-md transition-shadow">
                             <div class="flex-shrink-0">
                                 <div
-                                    class="flex h-14 w-14 items-center justify-center rounded-xl bg-accent-blue-light text-primary dark:bg-blue-900/30 dark:text-blue-300 border border-blue-100 dark:border-blue-800">
+                                    class="flex h-14 w-14 items-center justify-center rounded-xl bg-accent-gold text-primary dark:bg-blue-900/30 dark:text-blue-300 border border-blue-100 dark:border-blue-800">
                                     <span class="material-icons-outlined">lock</span>
                                 </div>
                             </div>
@@ -449,7 +452,7 @@
                             class="flex gap-6 p-8 rounded-2xl bg-white dark:bg-card-dark border border-gray-200 dark:border-gray-700 shadow-sm hover:shadow-md transition-shadow">
                             <div class="flex-shrink-0">
                                 <div
-                                    class="flex h-14 w-14 items-center justify-center rounded-xl bg-accent-blue-light text-primary dark:bg-blue-900/30 dark:text-blue-300 border border-blue-100 dark:border-blue-800">
+                                    class="flex h-14 w-14 items-center justify-center rounded-xl bg-accent-gold text-primary dark:bg-blue-900/30 dark:text-blue-300 border border-blue-100 dark:border-blue-800">
                                     <span class="material-icons-outlined">folder_shared</span>
                                 </div>
                             </div>
@@ -468,7 +471,7 @@
                             class="flex gap-6 p-8 rounded-2xl bg-white dark:bg-card-dark border border-gray-200 dark:border-gray-700 shadow-sm hover:shadow-md transition-shadow">
                             <div class="flex-shrink-0">
                                 <div
-                                    class="flex h-14 w-14 items-center justify-center rounded-xl bg-accent-blue-light text-primary dark:bg-blue-900/30 dark:text-blue-300 border border-blue-100 dark:border-blue-800">
+                                    class="flex h-14 w-14 items-center justify-center rounded-xl bg-accent-gold text-primary dark:bg-blue-900/30 dark:text-blue-300 border border-blue-100 dark:border-blue-800">
                                     <span class="material-icons-outlined">verified</span>
                                 </div>
                             </div>
@@ -570,6 +573,23 @@
                         </div>
                     </div>
                 </div>
+
+                <!-- Trust & Registrations -->
+                <div class="mt-12 flex flex-wrap justify-center lg:justify-start gap-6 opacity-60">
+                    <div class="flex items-center gap-2">
+                        <span class="material-icons-outlined text-sm">account_balance</span>
+                        <span class="text-xs font-bold uppercase tracking-wider">ICAI Registered</span>
+                    </div>
+                    <div class="flex items-center gap-2">
+                        <span class="material-icons-outlined text-sm">assured_workload</span>
+                        <span class="text-xs font-bold uppercase tracking-wider">MCA Regulated</span>
+                    </div>
+                    <div class="flex items-center gap-2">
+                        <span class="material-icons-outlined text-sm">verified</span>
+                        <span class="text-xs font-bold uppercase tracking-wider">ISO 27001 Certified</span>
+                    </div>
+                </div>
+
                 <div
                     class="mt-16 pt-8 border-t border-gray-800/50 flex flex-col md:flex-row justify-between items-center gap-6">
                     <p class="text-gray-500 text-xs">
